--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-icons": "^4.1.0",
     "react-images": "^1.1.7",
     "react-photo-gallery": "^8.0.0",
+    "react-pose": "^4.0.10",
+    "react-pose-text": "^3.1.0",
     "react-responsive": "^8.2.0",
     "react-responsive-gallery": "^1.2.5",
     "react-router-dom": "^5.2.0",
